themes/hugo-bulma-blocks-theme/assets/sass/style.sass
/* Customize mark tag used by search results */
.search-cantainer
  min-height: 70vh 
  .search-item
    padding: 1rem
    display: block
    &:hover
      box-shadow: 0rem 0rem 1rem #ccd2d687
      .list-item-title 
        color: #3A9800
  .list-item-title 
    font-size: 20px
  .list-item-description
    font-weight: 300
    color: #385668
      
mark
  background: #fbe1ad
  padding: .05rem 0.25em

body
  color: {{ .Param "text-primary1" }}

.content p
  color: {{ .Param "text-primary2" }}  

h2
  font-size: 3rem
  font-weight: 600
  line-height: 1
  margin-bottom: 2rem
  @media screen and (max-width: 768px)
    font-size: 2.25rem

@media screen and (max-width: 1024px)
  .content
    >.columns
      display: block
      .content 
        width: 100%

.explore-button
  margin-bottom: 10%
  margin-left: 5%
  margin-right: 5%

.external-link
  padding-right: 20px
  &:after
    position: absolute
    width: 16px
    content: ""
    margin-top: 5px
    margin-left: 3px
    height: 16px
    z-index: 1
    mask: url("img/external.svg")
    background-color: #7fa3b9

.scroll-on-page
  font-size: 14px
  padding: 3px 12px
  margin: 0 2px 5px 0px
  display: inline-block
  white-space: nowrap
  border-radius: 30px
  background: #58963217

.left-title
  padding-right: 4rem
  h2, h3
    margin-top: 0px !important
  h2:after, h3:after
    position: absolute
    left: 0
    margin-top: 70px
    width: 100px
    content: ""
    border-bottom: 5px solid #F1903B

p:empty:first-child 
  display: none

.vertical-colums 
  .columns
    flex-direction: column
    
.tabs ul 
  margin: 0

.rounded img
  border-radius: 10px  

th 
  font-weight: 500

.content h3 
  font-weight: 400

.grid 
  display: grid
  grid-gap: 16px
  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr))
  grid-auto-rows: 320px  

code 
  font-size: 14px  

